--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ deploy {
     }
 }
 
+test {
+    useJUnit()
+}
+
 def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 
 // Set to true to use debug for JNI.
