--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,11 +50,11 @@ jobs:
       run: ./gradlew spotlessCheck
 
   unit-test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # This grabs the WPILib docker container
-    container: wpilib/roborio-cross-ubuntu:2022-18.04
+    runs-on: ${{ matrix.os }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -64,6 +64,9 @@ jobs:
     # Grant execute permission for gradlew
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    
+    - name: Instlal roborio Toolchain
+      run: ./gradlew installRoborioToolchain
 
     # Runs a single command using the runners shell
     - name: Compile and run tests on robot code
