--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2022.4.1"
     id 'com.diffplug.spotless' version '5.5.0'
+    id 'edu.wpi.first.NativeUtils' version '2022.7.1' apply false
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
