--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ plugins {
     id 'edu.wpi.first.NativeUtils' version '2022.7.1' apply false
 }
 
+nativeUtils.addWpiNativeUtils()
+nativeUtils.withRoboRIO()
+
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
