--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,6 +61,11 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '11'
 
     # Grant execute permission for gradlew
     - name: Grant execute permission for gradlew
